--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ html{
     color: #ffffff;
 }
 
+.hidden{
+    display: none;
+}
+
 body{
     display: flex;
     flex-direction: column;
@@ -47,7 +51,7 @@ button{
     align-items: center;
     justify-content: center;
     font-size: 14px;
-    margin-bottom: 70px
+    margin-bottom: 30px
 }
 
 #random-message-generator-box{
@@ -64,9 +68,14 @@ button{
     margin: 30px, 0px, 5px;
 }
 
-#meditation-pic{
+.meditation-pic{
     height: 55%;
     width: 55%;
+}
+
+#add-message-button{
+    margin-bottom: 30px;
+    background:#78a7c6
 }
 
 
