--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ button{
     align-items: center;
     justify-content: center;
     font-size: 14px;
-    margin-bottom: 70px
+    margin-bottom: 30px
 }
 
 #random-message-generator-box{
@@ -67,6 +67,14 @@ button{
 #meditation-pic{
     height: 55%;
     width: 55%;
+}
+
+#create-message-button{
+    margin-bottom: 30px
+}
+
+.hidden{
+    display: none
 }
 
 
